Added meta tags

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Mercury Hearth</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="title" property="og:title" content="Mercury Hearth">
+  <meta property="og:type" content="Website">
+  <meta name="image" property="og:image" content="https://i.imgur.com/muovmGU.jpeg">
+  <meta name="description" property="og:description" content="A simple and effective Worldbuilding application">
+  <meta name="author" content="Brett Hageft">
+
+  <title>Mercury Hearth</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
